fix big left/right margins on text; fix the title overlapping with text

--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ p,
 td,
 ul {
 	margin: 0;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
 	padding: 0;
 	direction: ltr
 }
@@ -732,8 +732,8 @@ input {
 	text-align: center;
 	font-size: 80%;
 	margin-bottom: 5.66mm;
-	margin-left: 15%;
-	margin-right: 15%
+	margin-left: 10%;
+	margin-right: 10%
 }
 
 hr {
